WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225700
HTMLMediaElement::mediaLoadingFailedFatally() does direct dispatch of events; should schedule
https://bugs.webkit.org/show_bug.cgi?id=225700
Summary
HTMLMediaElement::mediaLoadingFailedFatally() does direct dispatch of events;...
Jer Noble
Reported
2021-05-12 09:02:24 PDT
HTMLMediaElement::mediaLoadingFailedFatally() does direct dispatch of events; should schedule
Attachments
Patch
(2.02 KB, patch)
2021-05-12 09:08 PDT
,
Jer Noble
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(2.00 KB, patch)
2021-05-12 09:19 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-05-12 09:03:05 PDT
<
rdar://75576322
>
Jer Noble
Comment 2
2021-05-12 09:08:21 PDT
Created
attachment 428376
[details]
Patch
Jer Noble
Comment 3
2021-05-12 09:19:12 PDT
Created
attachment 428377
[details]
Patch
EWS
Comment 4
2021-05-12 11:00:31 PDT
Committed
r277379
(
237635@main
): <
https://commits.webkit.org/237635@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428377
[details]
.
Darin Adler
Comment 5
2021-05-12 20:50:07 PDT
Comment on
attachment 428377
[details]
Patch Seems like we could make this more foolproof if we set some kind of "event dispatch forbidden" or "JavaScript forbidden" state somewhere so we can spot mistakes like this instantly with test failures without more sophisticated testing.
Ryosuke Niwa
Comment 6
2021-05-12 22:02:07 PDT
(In reply to Darin Adler from
comment #5
)
> Comment on
attachment 428377
[details]
> Patch > > Seems like we could make this more foolproof if we set some kind of "event > dispatch forbidden" or "JavaScript forbidden" state somewhere so we can spot > mistakes like this instantly with test failures without more sophisticated > testing.
Yeah, we should probably do that in a separate bug since we want to keep this fix small enough to merge into a branch.
Darin Adler
Comment 7
2021-05-13 09:58:33 PDT
(In reply to Ryosuke Niwa from
comment #6
)
> Yeah, we should probably do that in a separate bug since we want to keep > this fix small enough to merge into a branch.
Of course! This bug is already fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug